--- a/index.html
+++ b/index.html
@@ -12,19 +12,30 @@
 
 <body>
 
-    <div id="buttons-view"></div>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">GIF ME ANOTHER ONE!</h1>
+        </div>
+    </div>
 
-    <form id="topic-form">
+    <div class="container">
+        
+        <div id="buttons-view"></div>
 
-        <label for="topic-input">Let's try... </label>
-        <input type="text" id="topic-input">
-        <input id="add-topic" type="submit" value="Add it." class="btn btn-primary">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Let's try..." aria-label="Recipient's username"
+                aria-describedby="button-addon2" id="topic-input">
+            <div class="input-group-append">
+                <button id="add-topic" class="btn btn-outline-secondary" type="submit" id="button-addon2">Add it!</button>
+            </div>
+        </div>
 
-    </form>
+        <br>
 
-    <br>
-
-    <div id="gifs-appear-here"></div>
+        <div class="row">
+            <div class="col-md-12" id="gifs-appear-here"></div>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
