fixed body into rows and columns

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br>
 
         <div class="row">
-            <div class="col-md-12" id="gifs-appear-here"></div>
+            <div class="d-flex flex-wrap" id="gifs-appear-here"></div>
         </div>
     </div>
 
